--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>YOUTUBE </title>
+<title>Home</title>
 <style>
 	body {
 		background-color: skyblue;
@@ -18,7 +18,7 @@
 </style>
 <body>
 <center>
-<h1>YOUTUBE KPOP</h1>
+<h1>Home</h1>
 <div class="vid">
 <p>Hello my friend</p>
 </div>
