--- a/index.html
+++ b/index.html
@@ -1,29 +1,53 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Home</title>
 <style>
-	body {
-		background-color: skyblue;
-		font-family: cursive;
-	}
+body, html {
+  height: 100%;
+  margin: 0;
+}
 
-	.vid{
-		margin: 0;
-		border-width: 4;
-		border-style: dotted;
-		border-color: pink;
-		font-family: cursive;
-		
-	}
+.bgimg {
+  background-image: url('bridge.jpg');
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 25px;
+}
+
+.bottomleft {
+  position: absolute;
+  bottom: 0;
+  left: 16px;
+}
+
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+hr {
+  margin: auto;
+  width: 40%;
+}
 </style>
 <body>
-<center>
-<h1>Home</h1>
-<div class="vid">
-<p>Hello my friend</p>
+
+<div class="bgimg">
+  <div class="middle">
+    <h1>COMING SOON</h1>
+    <hr>
+    <p>27 days left</p>
+  </div>
+  <div class="bottomleft">
+    <p>Hang in there</p>
+  </div>
 </div>
 
-
-</center>
 </body>
 </html>
