--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ body, html {
 }
 
 .bgimg {
-  background-image: url('bridge.jpg');
+  background-image: url('/bridge.jpg');
   height: 100%;
   background-position: center;
   background-size: cover;
