--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ hr {
 
 <div class="bgimg">
   <div class="middle">
-    <h1>COMING SOON</h1>
+    <h1>MY NAME IS SANISH SHRESTHA<br>COMING SOON</h1>
     <hr>
     <p>26 days left</p>
   </div>
