pomodoro timer is added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           <li class="navigation-item">
             <a class="navigation-link" href="templates/project.html">Projects</a>
           </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="pomodoro.html">Pomodoro</a>
+          </li>
           <li class="navigation-item separator">
             <span>|</span>
         </li>
