--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="navigation-link" href="templates/project.html">Projects</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="pomodoro.html">Pomodoro</a>
+            <a class="navigation-link" href="templates/pomodoro.html">Pomodoro</a>
           </li>
           <li class="navigation-item separator">
             <span>|</span>
