--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="content">
       <section class="container centered">
         <div class="about">
-          <div class="avatar"><img src="/static/image/picture.png" alt="avatar"></div>
+          <div class="avatar"><img src="/static/image/picture.jpg" alt="avatar"></div>
           <h1>Sanish Shrestha</h1>
           <h2>Student and Open Source Tinkerer</h2>
           <ul>
