--- a/index.html
+++ b/index.html
@@ -1,78 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sanish Shrestha</title>
-<link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
-<link rel="stylesheet" type="text/css" href="static/css/style.css">
-<link rel="stylesheet" type="text/css" href="static/css/darktheme.css">
-<link rel="icon" type="image/png" href="static/image/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="static/image/favicon-16x16.png" sizes="16x16">
-<meta name="google-site-verification" content="CaW6s5a8ZPjdlrYTVjMA7kxjLnRtXMSKdSqcyptdLuU" />
-</head>
-
-<body class="colorscheme-dark" onload>
-  <main class="wrapper">
-    <nav class="navigation">
-      <section class="container">
-        <a class="navigation-title" href="https://sanishrestha.com.np/">
-          Sanish Shrestha
-        </a>
-        <span id="dark-mode-toggle" class="float-right">
-          <i class="fas fa-adjust fa-fw"></i>
-        </span>
-        <input type="checkbox" id="menu-toggle" />
-        <label class="menu-button float-right" for="menu-toggle">
-          <i class="fas fa-bars fa-fw"></i>
-        </label>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="templates/about.html">About</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="templates/project.html">Projects</a>
-          </li>
-          <li class="navigation-item separator">
-            <span>|</span>
-        </li>
-        </ul>
-      </section>
-    </nav>
-    <div class="content">
-      <section class="container centered">
-        <div class="about">
-          <div class="avatar"><img src="/static/image/picture.jpg" alt="avatar"></div>
-          <h1>Sanish Shrestha</h1>
-          <h2>Student and Open Source Tinkerer</h2>
-          <ul>
-            <li>
-              <a href="https://github.com/mostanglan/" aria-label="Github">
-                <i class="fab fa-github fa-2x" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/sanishrestha/" aria-label="Linkedin">
-                <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li>
-            <a href="mailto:ssanish321@gmail.com" aria-label="Linkedin">
-              <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
-            </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </div>
-    <footer class="footer">
-      <section class="container">
-      Powered by <a href="https://github.com/mostanglan/">ME</a>.
-      </section>
-    </footer>
-  </main>
-  <script src="static/js/darktheme.js"></script>
-</body>
-</html>
+  <html>
+    <head>
+  		<title>Sanish Shrestha</title>
+  			<meta charset="UTF-8" />
+  			<meta http-equiv="refresh" content="0; URL=https://www.sanishshrestha.com/" />
+  	</head>
+  </html>
