--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <li class="navigation-item">
             <a class="navigation-link" href="templates/about.html">About</a>
           </li>
-          <li class="navigation-item">
+          <!-- <li class="navigation-item">
             <a class="navigation-link" href="templates/project.html">Projects</a>
-          </li>
+          </li> -->
           <li class="navigation-item separator">
             <span>|</span>
         </li>
@@ -43,7 +43,7 @@
     <div class="content">
       <section class="container centered">
         <div class="about">
-          <div class="avatar"><img src="/static/image/picture.png" alt="avatar"></div>
+          <div class="avatar"><img src="static/image/picture.jpg" alt="avatar"></div>
           <h1>Sanish Shrestha</h1>
           <h2>Student and Open Source Tinkerer</h2>
           <ul>
@@ -68,7 +68,7 @@
     </div>
     <footer class="footer">
       <section class="container">
-      Powered by <a href="https://github.com/mostanglan/">ME</a>.
+      Powered by <a href="https://github.com/sanish-alive/">ME</a>.
       </section>
     </footer>
   </main>
