--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -49,7 +48,7 @@
           <h2>Student and Open Source Tinkerer</h2>
           <ul>
             <li>
-              <a href="https://github.com/mostanglan/" aria-label="Github">
+              <a href="https://github.com/sanish-alive/" aria-label="Github">
                 <i class="fab fa-github fa-2x" aria-hidden="true"></i>
               </a>
             </li>
@@ -76,12 +75,3 @@
   <script src="static/js/darktheme.js"></script>
 </body>
 </html>
-=======
-  <html>
-    <head>
-  		<title>Sanish Shrestha</title>
-  			<meta charset="UTF-8" />
-  			<meta http-equiv="refresh" content="0; URL=https://www.sanishshrestha.com/" />
-  	</head>
-  </html>
->>>>>>> 34d98e815d9920eaa2f19c6a52cb9d192feb4618
