--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main class="wrapper">
     <nav class="navigation">
       <section class="container">
-        <a class="navigation-title" href="https://sanishrestha.com.np/">
+        <a class="navigation-title" href="/">
           Sanish Shrestha
         </a>
         <span id="dark-mode-toggle" class="float-right">
