about to home href

--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
-<link rel="stylesheet" type="text/css" href="../static/css/style.css">
-<link rel="stylesheet" type="text/css" href="../static/css/darktheme.css">
-<link rel="icon" type="image/png" href="../static/image/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="../static/image/favicon-16x16.png" sizes="16x16">
+<link rel="stylesheet" type="text/css" href="static/css/style.css">
+<link rel="stylesheet" type="text/css" href="static/css/darktheme.css">
+<link rel="icon" type="image/png" href="static/image/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="static/image/favicon-16x16.png" sizes="16x16">
 </head>
 <body class="colorscheme-dark" onload>
 <main class="wrapper">
@@ -31,7 +31,7 @@ Sanish Shrestha
 </label>
 <ul class="navigation-list">
 <li class="navigation-item">
-<a class="navigation-link" href="/">About</a>
+<a class="navigation-link" href="/">Home</a>
 </li>
 <!-- <li class="navigation-item">
 <a class="navigation-link" href="project.html">Projects</a>
@@ -64,6 +64,6 @@ Powered by <a href="https://github.com/sanish-alive/">ME</a>.
 </section>
 </footer>
 </main>
-<script src="../static/js/darktheme.js"></script>
+<script src="static/js/darktheme.js"></script>
 </body>
 </html>
